--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@
       </body>
     <script  src="./script.js"></script>
 
+<h1 id="loveText" class="love-text">for my best boyfriend, fahri<3</h1>
   </body>
   
 </html>
