--- a/index.html
+++ b/index.html
@@ -611,12 +611,11 @@
               <div class="leaf leaf--3"></div>
             </div>
           </div>
-        </div>
         <script src="java.js"></script>
-      </body>
-    <script  src="./script.js"></script>
 
-<h1 id="loveText" class="love-text">for my best boyfriend, fahri<3</h1>
-  </body>
-  
+<h1 id="loveText" class="love-text">
+  for my best boyfriend, fahri<3</h1>
+ <script  src="./script.js"></script>
+          
+</body>
 </html>
