--- a/index.html
+++ b/index.html
@@ -613,9 +613,13 @@
           </div>
         <script src="java.js"></script>
 
-<h1 id="loveText" class="love-text">
-  for my best boyfriend, fahri<3</h1>
- <script  src="./script.js"></script>
+<div class="message-section">
+  <h1>
+    for my best boyfriend, fahri🤍 <br>
+    aku sayang banget sama dede, <br>
+    aya minta maaf yaaa sayanggg 🙁
+  </h1>
+</div>
           
 </body>
 </html>
